syntax = "proto3";

package primes;

option go_package = "github.com/shaikzhafir/udemy-go-grpc/primes/proto";

message PrimesRequest {
  int64 prime_number = 1;
}

message PrimesResponse {
  int64 result = 1;
}

service PrimesService {
  rpc Primes (PrimesRequest) returns (stream PrimesResponse);
}
